--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "md-notes",
+  "name": "notedrop",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "NoteDrop is a simple markdown notes taking app.",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "Sourasish Mondal",
   "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
