--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@mdxeditor/editor": "^3.19.3",
     "clsx": "^2.1.1",
+    "fs-extra": "^11.2.0",
     "jotai": "^2.10.3",
+    "lodash": "^4.17.21",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.5"
   },
